feat(admin,profile,ci): Thêm Admin Portal độc lập, sửa lỗi Profile & tối ưu test E2E CI
- feat(admin): Thêm Trang Quản trị Admin Portal độc lập (/admin) & fix quyền ROLE_ADMIN.
- fix(profile): Sửa lỗi mất dữ liệu bài viết khi sửa Profile & nâng cấp nút Bạn bè chuẩn Facebook.
- fix(backend): Phân lớp Clean Architecture cho AdminService (Pass 100% ArchUnit) & sửa warning Null.
- fix(e2e): Cập nhật timeout và selector Playwright chống timeout trên GitHub Actions CI.
- docs: Đồng bộ 100% hệ thống tài liệu dự án trong /docs và README.md.